fix footer text align

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -15,6 +15,7 @@ font-weight: 300;
 p {
   font-size:21px;
   color:gray;
+  text-align: center;
 }
 .footer {
   text-align: right;
